force-app/main/default/objects/NU_Course_Schedule__c/NU_Course_Schedule__c.object-meta.xml
<CustomObject>
    <label>NU Course Schedule</label>
    <nameField>
        <displayFormat>NU-{0000}</displayFormat>
        <label>Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NU Course Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>