force-app/main/default/objects/NU_Course_Schedule__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End</label>
    <type>DateTime</type>
</CustomField>