force-app/main/default/objects/NU_Course_Schedule__c/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <label>Number of Attendees</label>
    <summaryFilterItems>
        <field>NU_Enrollment_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Enrolled, Quiz Pending, Passed</value>
    </summaryFilterItems>
    <summaryForeignKey>NU_Enrollment_Request__c.Course_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>