force-app/main/default/objects/NU_Course_Schedule__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>