force-app/main/default/objects/NU_Course_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Course_Name__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>